--- a/TODO
+++ b/TODO
@@ -2,4 +2,6 @@
    . pid file does not exist - Creates pidfile and sends the last parsed pid into it, eval TRUE
    . pid file exists, pid is not running - Recreate pidfile, send last pid into it, eval TRUE
    . pid file exists, pid IS running - do nothing, eval FALSE
- - move check for existing function into supervize.c (from parser.y)
+ - move check for existing function into supervize.c (from parser.y) (DONE)
+ - use getopt for parsing options.
+ - Fix proper build system.
